- updated Program.filename
  not a constant anymore
  because we want to be able to override it
  from a shell scripts
- fixed shell.Domain asdoc
- fixed shell.Environment asdoc
- updated shell.Environment
  was bit broken, use Program.environ now
- fully implemented shell.Environment features
- added a new property Program.environment
  which returns a synchronised Environment instance

* 0.4.0 Akihabara (from tag 1T174)
- release

* 0.4.0 Akihabara (from tag 1T000)
- now we include ErrorConstant.as
  to be able to throw native errors from AS3
- lots of update to clean up documentation with asdoc
- added VMPI_GetEnviron
- implemented FileSystem class AS3 and native
- started to implement flash.filesystem and flash.net package
  not finished
- added undocumented class flash.system.SecurityPrivilege
- implemented C.sys.socket
- implemented C.sys.select
- implemented C.arpa.inet
- updated C.netdb, and others socket related API
- sockets and select are working for OS X
- sockets and select are working for Linux
- updated Windows native API so now socket and file descriptor
  can be inerchangeable which then allow to use close() on sockets
- updated Windows API so socket functions automatically initialize winsock
- updated exit() function to automatically cleanup winsock
  note: even without explictly calling exit() winsock will be cleaned up
  at condition the exit is normal, for abnormal exit winsock will be untouched
- sockets and select are working for Windows

* 0.4.0 Akihabara (from tag 1S540)
- added C.dirent basic closedir, opendir, readdir
- added more dirent: dirfd, fdopendir, rewinddir, seekdir, telldir
- added in fcntl: creat and open
- MAC OS X does not have fdopendir so we implmented it
- added non-standard function getdirentries() impl. in AS3
- refactor on fcntl, now asdoc indicate when options are compatible
  for POSIX(mac/linux), WIN (Windows only, MAC (Macintosh only), and NIX (Linux only)
- in fcntl, added openat() and fcntl() for POSIX (mac/linux)