@@ -22,8 +22,8 @@ package C.conio
      * @see http://en.wikipedia.org/wiki/Conio.h conio.h
      */
 
-	/**
-	 * <p>
+    /**
+     * <p>
      * <b>NEED MORE WORK</b>
      * </p>
      * 
@@ -32,14 +32,14 @@ package C.conio
      * <p>
      * TODO
      * </p>
-	 * 
+     * 
      * @langversion 3.0
      * @playerversion AVM 0.4
-	 */
+     */
     public function beep():void
     {
-    	//ASCII BEL 007
-    	Program.write( "\x07" );
+        //ASCII BEL 007
+        Program.write( "\x07" );
     }
 
     /**
@@ -150,5 +150,115 @@ package C.conio
      */
     [native("::avmshell::CConioClass::kbhit")]
     public native function kbhit():int;
+
+    /**
+     * Set the file translation to <b>binary</b> or <b>text</b>.
+     *
+     * <p>
+     * Under Windows the console is in text mode (<code>O_TEXT</code>) by default,
+     * this function allow to change it to binary mode (<code>O_BINARY</code>).
+     * </p>
+     * 
+     * <p>
+     * Under Mac OS X and Linux, the console on those platforms does not
+     * distinguish between text and binary, and so it will always returns <code>true</code>.
+     * </p>
+     * 
+     * <p>
+     * This is particularly useful when you need to pipe binary data on the command-line,
+     * for ex: <code>some_program | other_program</code>.
+     * The pipe (<b>|</b>) reads the output from one command and writes it to the input of another command,
+     * in the example: both commands start simultaneously, but then the <b>other_program</b>
+     * command pauses until it receives the <b>some_program</b> command's output.
+     * The <b>other_program</b> command uses the <b>some_program</b> command's output as
+     * its input, and then sends its output to <code>STDOUT</code>.
+     * </p>
+     * 
+     * @example Usage
+     * <listing>
+     * import shell.Runtime;
+     * import C.stdio.&#42;;
+     * import C.unistd.&#42;;
+     * import C.conio.&#42;;
+     * 
+     * // Note:
+     * // stdin is of type FILE
+     * // instead of 'stdin' you can also fdopen( STDIN_FILENO, "rb" )
+     * // STDIN_FILENO is of type int, eg. a file descriptor
+     * 
+     * // Note:
+     * // the usage is: $ cat some_binary | ./yourprogram
+     * // but if nothing is sent to stdin, it will block forever
+     * // for ex: $ ./yourprogram
+     * // the program will block forever till you
+     * // press Ctrl+D on the command line to signal end-of-file
+     * // for standard input on the running program.
+     * // to not block forever, we can use kbhit()
+     * 
+     * // if under Windows we set our console to binary
+     * if( Runtime.platform == "windows" )
+     * {
+     *     set_binary_mode( STDIN_FILENO, true );
+     * }
+     * 
+     * // read the stdin
+     * var buffer:uint = 8192; // 8K buffer, we read by chunk of 8K
+     * var bytes:ByteArray = new ByteArray(); // our data buffer
+     * var size:int; // the current size we read
+     * 
+     * var input:ByteArray = new ByteArray(); // where we concate the chunk of buffer
+     * var total:Number = 0; // the total size read
+     * 
+     * // kbhit() allow us to detect if some data is pending in stdin
+     * // to avoid our program to block forever
+     * if( kbhit() &gt; 0 )
+     * {
+     * 
+     *     // loop as long as fread() does not returns zero
+     *     // if returns zero that means EOF reached
+     *     // if returns less than zero that means an error occured
+     *     while( size = fread( bytes, int(buffer), stdin ) )
+     *     {
+     *         input.writeBytes( bytes ); //add the chunk of data
+     *         total += size;
+     *         bytes.clear(); //reset the chunk
+     *     }
+     * 
+     * }
+     * 
+     * // total and input.length should be the same size
+     * // if no data in stdin will be zero
+     * trace( "stdin received " + total + " bytes" );
+     * trace( "input size is " + input.length + " bytes" ); 
+     * 
+     * // now we can search the input bytes to determine
+     * // if the input is binary or text
+     * input.position = 0;
+     * var byte_null:ByteArray = new ByteArray();
+     *     byte_null.writeByte( 0 );
+     * // searchBytes() is not defined/explained here
+     * var found_null:Boolean = searchBytes( byte_null, input );
+     * 
+     * if( found_null )
+     * {
+     *      // if we found null we are a binary
+     *      // parse the input here
+     * }
+     * else
+     * {
+     *      // if not, we are text
+     *      var text:String = input.readUTFBytes();
+     * }
+     * </listing>
+     * 
+     * @langversion 3.0
+     * @playerversion AVM 0.4.1
+     * @playerversion WIN +
+     *
+     * @see http://msdn.microsoft.com/en-us/library/tw4k6df8.aspx _setmode (MSDN)
+     * @see http://www.microsoft.com/resources/documentation/windows/xp/all/proddocs/en-us/redirection.mspx?mfr=true Using command redirection operators (Windows XP)
+     */
+    [native("::avmshell::CConioClass::set_binary_mode")]
+    public native function set_binary_mode( fd:int, binary:Boolean = false ):Boolean;
 
 }
